Fixed the collapse bug. Stupid fat fingers

--- a/chuffler/Web/main.less
+++ b/chuffler/Web/main.less
@@ -1,9 +1,28 @@
 ﻿body {
+    font-family:sans-serif;
 }
 
-.node.collapsed {
+.node {
+    &.collapsed {
+        ul {
+            display:none;
+        }
+    }
 
     ul {
-        display:none;
+        margin:0;
+        padding:0;
+
+
+        li {
+            margin:0;
+            list-style:none;
+            padding: 0 0 0 10px;
+        }
     }
+
+    h5 {
+        
+    }
+
 }
